[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/fonts/upheavtt_24.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/achievement_icons/XIcon.png" type="Texture" id=2]
[ext_resource path="res://scripts/Lab.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/upheavtt_40.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/lab/clark_hover.png" type="Texture" id=5]
[ext_resource path="res://assets/lab/clark_normal.png" type="Texture" id=6]
[ext_resource path="res://assets/lab/lab_background.png" type="Texture" id=7]

[sub_resource type="Shader" id=16]
code = "shader_type canvas_item;

uniform float value = 1.0;

void fragment() {
	COLOR = texture(TEXTURE, UV);
	if (value != 1.0) {
		if (COLOR.r > 0.3 && COLOR.b > 0.3 && COLOR.g > 0.3) {
			COLOR.rgb = vec3(value);
		}
	}
}"

[sub_resource type="ShaderMaterial" id=17]
shader = SubResource( 16 )
shader_param/value = 1.0

[sub_resource type="StyleBoxEmpty" id=18]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="StyleBoxEmpty" id=20]

[sub_resource type="StyleBoxEmpty" id=21]

[sub_resource type="StyleBoxEmpty" id=22]

[node name="Lab" type="Node2D"]
script = ExtResource( 3 )

[node name="LabBackground" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( -255, -220 )
texture = ExtResource( 7 )
expand = true

[node name="QuitLab" type="Button" parent="LabBackground"]
material = SubResource( 17 )
margin_left = 1206.0
margin_top = 16.0
margin_right = 1254.0
margin_bottom = 64.0
rect_scale = Vector2( 1, 1.005 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 19 )
custom_styles/focus = SubResource( 20 )
custom_styles/disabled = SubResource( 21 )
custom_styles/normal = SubResource( 22 )
icon = ExtResource( 2 )
icon_align = 1

[node name="Clark" type="TextureButton" parent="."]
margin_left = 213.0
margin_top = 245.0
margin_right = 360.0
margin_bottom = 500.0
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_hover = ExtResource( 5 )

[node name="DialogueBox" type="ColorRect" parent="Clark"]
visible = false
margin_left = -49.0
margin_top = 259.0
margin_right = 873.0
margin_bottom = 438.0
color = Color( 0.364706, 0.65098, 0.862745, 1 )

[node name="WorkerNext" type="Button" parent="Clark/DialogueBox"]
anchor_left = -0.102
anchor_top = -0.587
margin_left = 870.044
margin_top = 212.073
margin_right = 899.0
margin_bottom = 156.0
action_mode = 0
flat = true

[node name="Label" type="Label" parent="Clark/DialogueBox/WorkerNext"]
margin_left = 16.0
margin_top = 5.0
margin_right = 111.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 4 )
text = "NEXT"
align = 1

[node name="Dialogue" type="RichTextLabel" parent="Clark/DialogueBox"]
margin_left = 87.0
margin_top = 72.0
margin_right = 772.0
margin_bottom = 110.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/normal_font = ExtResource( 1 )
text = "Hey There! What would you like to learn today? "

[connection signal="button_down" from="LabBackground/QuitLab" to="." method="_on_QuitLab_button_down"]
[connection signal="mouse_entered" from="LabBackground/QuitLab" to="." method="_on_QuitLab_mouse_entered"]
[connection signal="mouse_exited" from="LabBackground/QuitLab" to="." method="_on_QuitLab_mouse_exited"]
[connection signal="pressed" from="LabBackground/QuitLab" to="." method="_on_QuitLab_pressed"]
[connection signal="pressed" from="Clark" to="." method="_on_Clark_pressed"]
[connection signal="pressed" from="Clark/DialogueBox/WorkerNext" to="." method="_on_WorkerNext_pressed"]
